<resources>
    <string name="app_name">ObjectiveQuiz</string>
    <string name="question">"Is this is good question?"</string>
    <string name="trueText">Yes</string>
    <string name="falseText">No</string>
    <string name="nextText">Next</string>
    <string name="hintText">Hint</string>
    <string name="cheatText">Cheat</string>
    <string name="showHintText">Show Hint</string>
    <string name="showCheatText">Show Answer</string>
    <string name="back">Back</string>
</resources>
