<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="in.ac.iiitd.psingh.mc16.objectivequiz.QuizActivity"
    android:background="#FEBE9C">


    <TextView
        android:id="@+id/textViewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="true">
        <Button
            android:id="@+id/TrueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trueText"
            android:drawableStart="@drawable/arrow_left"
            android:textSize="16dp"
            android:drawableLeft="@drawable/arrow_left" />
        <Button
            android:id="@+id/FalseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/falseText"
            android:drawableEnd="@drawable/arrow_right"
            android:drawableRight="@drawable/arrow_right"
            android:textSize="16dp" />
    </LinearLayout>
    <Button
        android:id="@+id/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextText"
        android:textSize="16dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="true">
        <Button
            android:id="@+id/HintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hintText"
            android:textSize="16dp"
             />
        <Button
            android:id="@+id/CheatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheatText"
            android:textSize="16dp"
             />
    </LinearLayout>
</LinearLayout>
